--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
   },
   "homepage": "https://github.com/swathicherala/Spotify-Clone#readme",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "express-async-handler": "^1.2.0",
     "http-status-codes": "^2.3.0",
-    "mongoose": "^9.2.0"
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.2.0",
+    "multer": "^2.0.2"
   }
 }
